# variational-tpr

./: .gitignore  LICENSE  README.md  aggregate_results.py  aggregate_results_ver1.py  evaluation.py  launch_experiments.sh  launcher_gpflow.sh  non_sparse_evaluation.py  non_sparse_launcher.sh  non_sparse_run_evaluation.sh  out.txt  pyproject.toml  requirements.txt  rerun.sh  run_evaluation.sh  run_evaluation_gpflow.sh  run_local.sh  sparse_evaluation.py  sparse_launcher.sh  sparse_launcher_gpu.sh  sparse_run_evaluation.sh  sparse_run_evaluation_gpu.sh  test.py  test_slurm.py  test_slurm.sh
experiments/: benchmark_non_sparse.py  dense.py  dense_v1.py  dense_v2.py  dense_v3.py  dense_v4.py  dense_v5.py  dense_v6.py  dense_v7.py  dense_v8.py  dense_v9.py  non_sparse.py  non_sparse_evaluation.py  sparse.py  sparse_evaluation.py  sparse_evaluation_gp.py  sparse_evaluation_gpu.py  sparse_v1.py  sparse_v2.py  sparse_v3.py  sparse_v4.py  sparse_v5.py  sparse_v6.py
notebooks/: 20250911_sparse_tpr.ipynb  20250913_tpr.ipynb  20250914_dataset.ipynb  20250914_ngd_diag.ipynb  20250914_plot.ipynb  20250914_xu.ipynb  20250915_gpr.ipynb  20250916_fim.ipynb  20250916_gd.ipynb  20250918_plot.ipynb  20250920_plot.ipynb  20250924_swap_order.ipynb  baselines.ipynb  bayesian optimization.ipynb  cavi_tprt.ipynb  debugging.ipynb  debugging2.ipynb  debugging3.ipynb  debugging4.ipynb  debugging5.ipynb  debugging6.ipynb  elbo_supervision.ipynb  gpc_jax.ipynb  gpflow.ipynb  import_test.ipynb  making_slides.ipynb  mlp_evaluation.ipynb  models.ipynb  ngd.ipynb  ngd_gp.ipynb  ngd_mod.ipynb  svgp.ipynb  (+15 more)
(+35 files in other folders)
