[project]
name = "student"
version = "0.1.0"
description = "A variational Student-t process regressor, born in Nara, Japan and raised in München, Germany."
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]