[project]
name = "student"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "ucimlrepo>=0.0.7",
    "openpyxl>=3.1.0",
    "kaggle>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
